chat app user link done

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
             <h1>Chat App</h1>
         </div>
         <div id="" class="chat">
+            <ul>
+                <li> <input  id="username1" type="text" placeholder="name1"> </li>
+                <li > <input id="username2" type="text" placeholder="name2"> </li>
+                <button onclick="username()">start</button>
+            </ul>
             <ul id="render">
                 <!-- <li class="left"> <span class="hello"> hello</span> </li>
                 <li class="right"> <span class="hello ">fine and you</span> </li> -->
