--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-auth.js"></script>
 
     <script>
         // Your web app's Firebase configuration
@@ -34,12 +35,14 @@
             <h1>Chat App</h1>
         </div>
         <div id="" class="chat">
-            <ul>
+            <!-- <ul>
                 <li> <input  id="username1" type="text" placeholder="name1"> </li>
                 <li > <input id="username2" type="text" placeholder="name2"> </li>
                 <button onclick="username()">start</button>
-            </ul>
-            <ul id="render">
+            </ul> -->
+            <button onclick="fbLogin()">login fb</button>
+            <button onclick="fbOut()">Signout</button>
+            <ul class="content" id="render">
                 <!-- <li class="left"> <span class="hello"> hello</span> </li>
                 <li class="right"> <span class="hello ">fine and you</span> </li> -->
                 
