--- a/index.html
+++ b/index.html
@@ -130,6 +130,8 @@
                     <i class="fa fa-comments mt-5" style="font-size: 200px;" aria-hidden="true"></i>
                     <h2 class="mt-3">Select your friend & Start Chating</h2>
                     <a href="#" onclick="showFlist()" class="d-md-none">New chat</a>
+                    <button onclick="signIn()" class="btn btn-primary">Sign In</button>
+                    <button onclick="signOut()" class="btn btn-primary">Sign Out</button>
                 </div>
             </div>
         </div>
