chat app like whatsapp fb auth  done

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <div class="card-header">
                         <div class="row ">
                             <div class="col-md-10 col-10">
-                                <img class="profile-pic rounded-circle" src="images/profile.png" alt="">
+                                <img class="profile-pic rounded-circle" id="profile-img" src="images/profile.png" alt="">
                             </div>
                             <div class="col-md-2 col-2">
                                 <i class="fa fa-chevron-left mt-3 d-md-none " style="cursor: pointer;" onclick="hideFlist()" aria-hidden="true"></i>
